# personal-website

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  vercel-build.sh  vercel.json
essays-gen/: Cargo.toml
essays-gen/src/: essays.rs  main.rs
public/styles/: styles.css  theme.js
src/: app.rs  content.rs  format.rs  lenis.rs  main.rs  media.rs  motion.rs  theme.rs
src/bg/: mod.rs  webgl.rs
src/components/: ascii.rs  mod.rs  navbar.rs  site_background.rs  theme_toggle.rs  viewport_frame.rs
src/pages/: blog.rs  home.rs  mod.rs  projects.rs
style/: input.css
